# Packer-Fabric-Mods

./: CMakeLists.txt  README.md
include/: miniz.c
src/: main.cpp  patcher_core.cpp  utils.cpp
src/core/: patcher_core.hpp  patcher_file.hpp  patcher_settings.hpp
src/utils/: string_utils.h  utils.h
